--- a/server/file_manager/package.json
+++ b/server/file_manager/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1"
   }
 }
