--- a/server/file_manager/package.json
+++ b/server/file_manager/package.json
@@ -10,5 +10,9 @@
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1"
+  },
+  "scripts": {
+    "start": "node index.js",
+    "run": "node index.js"
   }
 }
