--- a/server/file_manager/package.json
+++ b/server/file_manager/package.json
@@ -6,10 +6,12 @@
   "author": "dayi lc",
   "license": "MIT",
   "dependencies": {
+    "better-sqlite3": "^8.3.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "sqlite": "^4.1.2"
   },
   "scripts": {
     "start": "node index.js",
