--- a/server/print_really/requirements.txt
+++ b/server/print_really/requirements.txt
@@ -1,16 +1,11 @@
-certifi==2021.10.8
-charset-normalizer==2.0.7
-click==8.0.3
-colorama==0.4.4
-Flask==2.0.2
-fpdf==1.7.2
-idna==3.3
-itsdangerous==2.0.1
-Jinja2==3.0.2
-MarkupSafe==2.0.1
-Pillow==8.4.0
-pywin32==302
-requests==2.26.0
-urllib3==1.26.7
-Werkzeug==2.0.2
-win32printing==0.1.3
+click==8.1.3
+colorama==0.4.6
+Flask==2.2.3
+importlib-metadata==6.4.1
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+Pillow==9.5.0
+pywin32==306
+Werkzeug==2.2.3
+zipp==3.15.0
