--- a/server/print_really/requirements.txt
+++ b/server/print_really/requirements.txt
@@ -1,13 +1,57 @@
+aiofiles==23.1.0
+anyio==3.6.2
+certifi==2022.12.7
+charset-normalizer==3.1.0
+ci-info==0.3.0
 click==8.1.3
 colorama==0.4.6
+configobj==5.0.8
+configparser==5.3.0
+docx2pdf==0.1.8
+etelemetry==0.3.0
+filelock==3.11.0
+fitz==0.0.1.dev2
 Flask==2.2.3
+fpdf==1.7.2
+frontend==0.0.3
+future==0.18.3
+h11==0.14.0
+httplib2==0.22.0
+idna==3.4
 importlib-metadata==6.4.1
+isodate==0.6.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
+looseversion==1.1.2
+lxml==4.9.2
 MarkupSafe==2.1.2
+networkx==3.1
+nibabel==5.1.0
+nipype==1.8.6
+numpy==1.24.2
+packaging==23.1
+pandas==2.0.0
+pathlib==1.0.1
 Pillow==9.5.0
+prov==2.0.0
+pydot==1.4.2
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2023.3
 pywin32==306
+pyxnat==1.5
+rdflib==6.3.2
+requests==2.28.2
+scipy==1.10.1
+simplejson==3.19.1
+six==1.16.0
+sniffio==1.3.0
+starlette==0.26.1
+tqdm==4.65.0
+traits==6.3.2
+typing_extensions==4.5.0
+tzdata==2023.3
+urllib3==1.26.15
+uvicorn==0.21.1
 Werkzeug==2.2.3
 zipp==3.15.0
-docx2pdf==0.1.8
-fpdf2==2.7.3
