--- a/server/print_really/requirements.txt
+++ b/server/print_really/requirements.txt
@@ -37,6 +37,7 @@ prov==2.0.0
 pydot==1.4.2
 pyparsing==3.0.9
 python-dateutil==2.8.2
+pytils==0.4.1
 pytz==2023.3
 pywin32==306
 pyxnat==1.5
@@ -47,6 +48,7 @@ simplejson==3.19.1
 six==1.16.0
 sniffio==1.3.0
 starlette==0.26.1
+tools==0.1.9
 tqdm==4.65.0
 traits==6.3.2
 typing_extensions==4.5.0
