--- a/server/print_really/pyproject.toml
+++ b/server/print_really/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "flask>=2.2.3",
     "pillow>=9.5.0",
     "docx2pdf>=0.1.8",
+    "requests>=2.28.2",
 ]
 requires-python = ">=3.7"
 readme = "README.md"
