--- a/server/print_really/pyproject.toml
+++ b/server/print_really/pyproject.toml
@@ -12,8 +12,9 @@ dependencies = [
     "pillow>=9.5.0",
     "docx2pdf>=0.1.8",
     "requests>=2.28.2",
+    "aspose-words>=23.4.0",
 ]
-requires-python = ">=3.7"
+requires-python = ">=3.7,<=3.11"
 readme = "README.md"
 license = {text = "MIT"}
 
