--- a/server/file_manager/package.json
+++ b/server/file_manager/package.json
@@ -13,6 +13,7 @@
     "multer": "^1.4.5-lts.1"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   }
 }
