--- a/server/file_manager/package.json
+++ b/server/file_manager/package.json
@@ -7,9 +7,11 @@
   "license": "MIT",
   "dependencies": {
     "better-sqlite3": "^8.3.0",
+    "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "http-proxy": "^1.18.1",
+    "js-yaml": "^4.1.0",
     "multer": "^1.4.5-lts.1"
   },
   "scripts": {
