--- a/server/print_really/pyproject.toml
+++ b/server/print_really/pyproject.toml
@@ -13,6 +13,9 @@ dependencies = [
     "docx2pdf>=0.1.8",
     "requests>=2.28.2",
     "aspose-words>=23.4.0",
+    "PyYAML>=6.0",
+    "aiohttp>=3.8.4",
+    "asyncio>=3.4.3",
 ]
 requires-python = ">=3.7,<=3.11"
 readme = "README.md"
