modified:   config/config.yaml new file:   server/print_really/.idea/workspace.xml new file:   server/print_really/plugins/api_http_bot.py modified:   server/print_really/plugins/func/func_get_server_config.py modified:   server/print_really/plugins/func/print_cn.py

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,3 +3,6 @@ auth_inside_server_api_key: 2f97c665-256b-43a5-a9f1-19ebb890fb76
 
 # 服务器对外的端口号
 server_port : 8080
+
+# HTTP接口的秘钥:
+http_auth_key : 2aaf2b85-95a7-4d28-ace9-553a31b4ccc3
